# AssettoCorsaSimpleCamera

./: AssettoCorsaSimpleCamera_gcp.toml  CMakeLists.txt  README.md  main.cpp  util.h
components/: customcamera.h
